--- a/Bierhier.css
+++ b/Bierhier.css
@@ -65,3 +65,40 @@ article.contact{
     margin-right: 75px;
 }
 
+section.recepten{
+
+}
+
+article.recepten{
+    margin-top: 0px;
+    width: 45%;
+}
+
+img.gerecht{
+    width: 50%;
+    float: right;
+    margin-top: 25px;
+}
+
+.column {
+    float: left;
+    width: 75%;
+    padding: 5px;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.row {
+    display: flex;
+    padding-top: 20px;
+    padding-right: 5px;
+}
+
+.column {
+    flex: 75%;
+    padding: 15px;
+}
