--- a/Bierhier.css
+++ b/Bierhier.css
@@ -65,10 +65,6 @@ article.contact{
     margin-right: 75px;
 }
 
-section.recepten{
-
-}
-
 article.recepten{
     margin-top: 0px;
     width: 45%;
@@ -102,3 +98,23 @@ img.gerecht{
     flex: 75%;
     padding: 15px;
 }
+
+section.img{
+    float: left;
+    margin-right: 15px;
+    margin-top: 20px;
+    width: 300px;
+    vertical-align: auto;
+}
+
+section.text{
+    margin-right:5px;
+    font-size: 75%;
+    margin-top: 20px;
+}
+
+section.links{
+    margin-top: 25px;
+}
+
+
