Sport an contact

--- a/Bierhier.css
+++ b/Bierhier.css
@@ -1,6 +1,7 @@
 div#wrapper, footer{
     margin:auto;
     width:1000px;
+
     padding: 20px;
     background-color: lightgrey;
 }
@@ -60,14 +61,6 @@ footer a{
     color: white;
 }
 
-article.contact{
-    float: right;
-    margin-right:50px;
-    font-size: 100%;
-    margin-top: 20px;
-
-}
-
 article.recepten{
     margin-top: 0px;
     width: 45%;
@@ -120,10 +113,8 @@ section.links{
     margin-top: 25px;
 }
 
-section.google{
+section.google, article.form{
     float: left;
     margin-top: 20px;
     vertical-align: auto;
 }
-
-
